--- a/style.css
+++ b/style.css
@@ -7,13 +7,8 @@ body {
      padding-left: 600px;
     }
 
-button{
-    display:block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 300px;
-	height: 75px;
-	font-size: 16px;
-	margin-top: 10px;
+#boton_p2{
+    display: grid;
 }
+
    
