--- a/pi_2/styles/main.css
+++ b/pi_2/styles/main.css
@@ -40,3 +40,11 @@ button.menu-object:hover:not(:active){
 	height: 100px;
 
 }
+/* 
+JUNTAR CARTAS:
+#image{
+	display:block;
+	margin-left: 50 px;
+	margin-right: 50 px;
+}
+*/
