--- a/pi_2/styles/main.css
+++ b/pi_2/styles/main.css
@@ -25,13 +25,13 @@ button.menu-object:active{
 	font-size: 18px;
 	width: 275px;
 	height: 70px;
-	text-align: center;
 }
 
 button.menu-object:hover:not(:active){
 	font-size: 22px;
 	width: 325px;
 	height: 85px;
+	text-align: center;;
 }
 .cards {
 	display:flex;
