--- a/pi_2/styles/main.css
+++ b/pi_2/styles/main.css
@@ -37,14 +37,14 @@ button.menu-object:hover:not(:active){
 }
 
 .cards {
-	display:flex;
+	display:block;
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
 	height: 100px;
 }
-#image{
+/* #image{
 	display:block;
 	margin-left: 50 px;
 	margin-right: 50 px;
-}
+} */
