--- a/pi_2/styles/main.css
+++ b/pi_2/styles/main.css
@@ -37,7 +37,7 @@ button.menu-object:hover:not(:active){
 }
 
  .cards {
-	display:flex;
+	display:block;
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
