--- a/pi_2/styles/main.css
+++ b/pi_2/styles/main.css
@@ -37,7 +37,7 @@ button.menu-object:hover:not(:active){
 }
 
  .cards {
-	display:block;
+	display:flex;
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
@@ -49,3 +49,6 @@ button.menu-object:hover:not(:active){
 	margin-left: 50 px;
 	margin-right: 50 px;
 } 
+img{
+	border : 3 px;
+}
