--- a/pi_2/styles/main.css
+++ b/pi_2/styles/main.css
@@ -51,7 +51,6 @@ button.menu-object:hover:not(:active){
 
  #image{
 	display:block;
-	margin-left: 50 px;
-	margin-right: 50 px;
+	padding-left: inherit;
 } 
 
