--- a/style.css
+++ b/style.css
@@ -1,6 +1,27 @@
 body {
     background-color: aqua;
     }
+
+    .menu-object{
+
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 300px;
+        height: 75px;
+        font-size: 16px;
+        
+    }
+    #boton{
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        margin-top: 100px;
+        width: 100px;
+        height: 50px;
+    
+    }
+    
 #title {
      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
      font-size: 50px;
